# near-rpc-client

./: .gitignore
.github/workflows/: sync-openrpc.yml
rust/: Cargo.toml  build.rs
rust/examples/: mainnet.rs
rust/src/: client.rs  generated.rs  lib.rs  types.rs
shared/: openrpc.json
typescript/: package.json  tsconfig.json  types.d.ts
typescript/examples/: mainnet.ts
typescript/scripts/: generate-methods.ts  generate.ts
typescript/src/: client.ts  index.ts  methods.ts  schemas.ts
