[package]
name = "near-rpc-client"
version = "0.1.0"
edition = "2021"
description = "Generated Rust types and client for NEAR Protocol JSON-RPC API"
license = "Apache-2.0"
repository = "https://github.com/near/near-rpc-client"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regress = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

[build-dependencies]
typify = "0.6"
serde_json = "1"
syn = "2"
prettyplease = "0.2"

[features]
default = ["client"]
client = ["reqwest", "tokio"]
